# 0xfarmer-agent-shop

./: .gitignore  Cargo.toml  README.md  ecosystem.config.cjs  package-lock.json  package.json
assets/: site.css  site.js
contracts/: FarmerShopNFT.sol
scripts/: compile-contract.mjs  deploy-farmer-shop.mjs  mint-farmer-token.mjs
src/: app.rs  config.rs  content.rs  handlers.rs  lib.rs  main.rs  shop.rs  views.rs
