[package]
name = "personal_website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
tower-http = { version = "0.6", features = ["fs"] }
